--- a/.github/workflows/echobot-build-CSEFE.yml
+++ b/.github/workflows/echobot-build-CSEFE.yml
@@ -1,18 +1,18 @@
-name: .NET BOT D1 BUILD {OrgName}
+name: .NET BOT D1 BUILD CSEFE
 
 on:
   push:
     branches:
-      - '{BranchName}'
+      - 'bcage29/TeamsVoiceEchoBot'
     paths:
       - './Samples/PublicSamples/EchoBot/src/**'
-      - .github/workflows/echobot-build-{OrgName}.yml
+      - .github/workflows/echobot-build-CSEFE.yml
   pull_request:
     branches:
-      - '{BranchName}'
+      - 'bcage29/TeamsVoiceEchoBot'
     paths:
       - './Samples/PublicSamples/EchoBot/src/**'
-      - .github/workflows/echobot-build-{OrgName}.yml
+      - .github/workflows/echobot-build-CSEFE.yml
   workflow_dispatch:
 
 env:
@@ -21,8 +21,8 @@ env:
   Component:   EchoBot
   BuildName:   0.1.${{ github.run_number }}
   Environment: D1
-  OrgName:     {OrgName}
-  Location:    {Location}
+  OrgName:     CSEFE
+  Location:    eastus2
 
 jobs:
   build:
@@ -67,7 +67,7 @@ jobs:
     - name: Login via Az module
       uses: azure/login@v1
       with:
-        creds: ${{ secrets.AZURE_CREDENTIALS_{OrgName}_BOT }}
+        creds: ${{ secrets.AZURE_CREDENTIALS_CSEFE_BOT }}
         enable-AzPSSession: true
 
     - name: G1_RG_UploadArtifacts_to_Blob
@@ -105,3 +105,6 @@ jobs:
           }
           & ./Samples/PublicSamples/EchoBot/ADF/release-az/Update-AzBuildMetaData.ps1 @Params
         azPSVersion: latest
+
+
+
