--- a/.github/workflows/echobot-infra-CSEFE.yml
+++ b/.github/workflows/echobot-infra-CSEFE.yml
@@ -1,4 +1,4 @@
-name: .NET BOT D1 INFRA {OrgName}
+name: .NET BOT D1 INFRA CSEFE
 
 # Controls when the action will run.
 on:
@@ -6,24 +6,24 @@ on:
   # https://docs.github.com/en/free-pro-team@latest/actions/reference/events-that-trigger-workflows
   push:
     branches:
-      - '{BranchName}'
+      - 'bcage29/TeamsVoiceEchoBot'
     paths:
       - './Samples/PublicSamples/EchoBot/ADF/**'
-      - .github/workflows/echobot-infra-{OrgName}.yml
+      - .github/workflows/echobot-infra-CSEFE.yml
   pull_request:
     branches:
-      - '{BranchName}'
+      - 'bcage29/TeamsVoiceEchoBot'
     paths:
       - './Samples/PublicSamples/EchoBot/ADF/**'
-      - .github/workflows/echobot-infra-{OrgName}.yml
+      - .github/workflows/echobot-infra-CSEFE.yml
   workflow_dispatch:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 env:
-  OrgName: {OrgName}
-  Location: {Location}
+  OrgName: CSEFE
+  Location: eastus2
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -43,7 +43,7 @@ jobs:
       - name: Login via Az module
         uses: azure/login@v1
         with:
-          creds: ${{secrets.AZURE_CREDENTIALS_{OrgName}_BOT}}
+          creds: ${{secrets.AZURE_CREDENTIALS_CSEFE_BOT}}
           enable-AzPSSession: true
 
       - name: Deploy_All_Subscription
@@ -59,4 +59,7 @@ jobs:
             ./Samples/PublicSamples/EchoBot/ADF/main.ps1 @Params
             if ($e){throw $e}
         env:
-          VMSS_CREDENTIALS: ${{ secrets.VMSS_CREDENTIALS_{OrgName}_BOT }}
+          VMSS_CREDENTIALS: ${{ secrets.VMSS_CREDENTIALS_CSEFE_BOT }}
+
+
+
