--- a/Samples/V1.0Samples/LocalMediaSamples/PolicyRecordingBot/WorkerRole/app.config
+++ b/Samples/V1.0Samples/LocalMediaSamples/PolicyRecordingBot/WorkerRole/app.config
@@ -79,9 +79,9 @@
 
   <appSettings>
     <!-- update these with your Bot Id, AAD application id and your AAD application secret from your bot registration portal. -->
-    <add key="BotName" value="sasthana-cr-bot" />
-    <add key="AadAppId" value="f98cee10-39a5-4708-b50d-558ea821966d" />
-    <add key="AadAppSecret" value="cT87Q~qoF9~XdrXga__khZ~sVezB2QsEpSU7h" />
+    <add key="BotName" value="%BotName%" />
+    <add key="AadAppId" value="%AppId%" />
+    <add key="AadAppSecret" value="%AppSecret%" />
     <add key="PlaceCallEndpointUrl" value="https://graph.microsoft.com/v1.0" />
   </appSettings>
 </configuration>
