Added handling for env vars
Removed debugger

--- a/Samples/V1.0Samples/RemoteMediaSamples/IncidentBot/appsettings.json
+++ b/Samples/V1.0Samples/RemoteMediaSamples/IncidentBot/appsettings.json
@@ -20,5 +20,6 @@
     "AppSecret": "%AppSecret%",
     "PlaceCallEndpointUrl": "https://graph.microsoft.com/v1.0",
     "BotBaseUrl": "%ServiceDns%"
-  }
+  },
+  "baseUrl":  "http://localhost:9442"
 }
