Changes to make the service run on the VM

--- a/Samples/V1.0Samples/RemoteMediaSamples/IncidentBot/appsettings.json
+++ b/Samples/V1.0Samples/RemoteMediaSamples/IncidentBot/appsettings.json
@@ -21,5 +21,6 @@
     "PlaceCallEndpointUrl": "https://graph.microsoft.com/v1.0",
     "BotBaseUrl": "%ServiceDns%"
   },
-  "baseUrl":  "http://localhost:9442"
+  "baseUrl": "http://*:9442",
+  "urlProtocol": "http"
 }
