Added ADF description under script internals
Trimmed Global-Global.json role list
Changed to use https instead

--- a/Samples/V1.0Samples/RemoteMediaSamples/IncidentBot/appsettings.json
+++ b/Samples/V1.0Samples/RemoteMediaSamples/IncidentBot/appsettings.json
@@ -21,6 +21,7 @@
     "PlaceCallEndpointUrl": "https://graph.microsoft.com/v1.0",
     "BotBaseUrl": "%ServiceDns%"
   },
-  "baseUrl": "http://*:9442",
-  "urlProtocol": "http"
+  "baseUrl": "https://*:9442",
+  "urlProtocol": "https"
 }
+
