Changes to deploy Incident Bot to VMSS  (#534)
Changed to introduce VMSS deployment for the Incident Bot using Github Workflow Actions

--- a/Samples/V1.0Samples/RemoteMediaSamples/IncidentBot/appsettings.json
+++ b/Samples/V1.0Samples/RemoteMediaSamples/IncidentBot/appsettings.json
@@ -20,5 +20,8 @@
     "AppSecret": "%AppSecret%",
     "PlaceCallEndpointUrl": "https://graph.microsoft.com/v1.0",
     "BotBaseUrl": "%ServiceDns%"
-  }
+  },
+  "baseUrl": "https://*:9442",
+  "urlProtocol": "https"
 }
+
