--- a/Samples/V1.0Samples/RemoteMediaSamples/IncidentBot/IncidentBot.csproj
+++ b/Samples/V1.0Samples/RemoteMediaSamples/IncidentBot/IncidentBot.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net472</TargetFramework>
     <UserSecretsId>aspnet-IcMBot-039CF427-A350-4C31-97B4-EA5D5F12960C</UserSecretsId>
     <WebProject_DirectoryAccessLevelKey>0</WebProject_DirectoryAccessLevelKey>
-    <Platforms>AnyCPU</Platforms>
+    <Platforms>AnyCPU;x64</Platforms>
     <RootNamespace>Sample.IncidentBot</RootNamespace>
     <AssemblyName>Sample.IncidentBot</AssemblyName>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
@@ -26,6 +26,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging.AzureAppServices" Version="2.1.1" />
     <PackageReference Include="Microsoft.Graph.Communications.Calls" Version="1.2.0.3742" />
     <PackageReference Include="System.Threading.Tasks.Dataflow" Version="5.0.0" />
+    <PackageReference Include="Topshelf" Version="4.3.0" />
     <ProjectReference Include="..\..\..\Common\Sample.Common\Sample.Common.csproj" />
     <Reference Include="System.Net.Http" />
   </ItemGroup>
