--- a/Samples/V1.0Samples/LocalMediaSamples/AudioVideoPlaybackBot/WorkerRole/app.config
+++ b/Samples/V1.0Samples/LocalMediaSamples/AudioVideoPlaybackBot/WorkerRole/app.config
@@ -75,9 +75,9 @@
 
   <appSettings>
     <!-- update these with your Bot Id, AAD application id and your AAD application secret from your bot registration portal. -->
-    <add key="BotName" value="sasthana-avbot-sample-01" />
-    <add key="AadAppId" value="1a61a6ca-84c5-4e4c-951c-3ce87ee56e0b" />
-    <add key="AadAppSecret" value="JTJ7Q~Hu2o~9jKtPQchFzBmjlqcpT8pWheWtz" />
+    <add key="BotName" value="%BotName%" />
+    <add key="AadAppId" value="%AppId%" />
+    <add key="AadAppSecret" value="%AppSecret%" />
     <add key="H264_1280x720_30Fps" value="output720p.264" />
     <add key="H264_640x360_30Fps" value="output360p.264" />
     <add key="H264_320x180_15Fps" value="output180p.264" />
