--- a/Samples/V1.0Samples/RemoteMediaSamples/IncidentBot/IncidentBot.csproj
+++ b/Samples/V1.0Samples/RemoteMediaSamples/IncidentBot/IncidentBot.csproj
@@ -28,7 +28,7 @@
     <PackageReference Include="System.Threading.Tasks.Dataflow" Version="5.0.0" />
     <PackageReference Include="Topshelf" Version="4.3.0" />
     <ProjectReference Include="..\..\..\Common\Sample.Common\Sample.Common.csproj" />
-    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http" Version="2.2.8"/>
   </ItemGroup>
 
 </Project>
