--- a/Samples/V1.0Samples/StatelessSamples/SimpleIvrBot/SimpleIvrBot.csproj
+++ b/Samples/V1.0Samples/StatelessSamples/SimpleIvrBot/SimpleIvrBot.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
   
   <ItemGroup>
@@ -11,7 +11,7 @@
   </ItemGroup>  
   
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.8"/>
     <PackageReference Include="Microsoft.Extensions.Logging.AzureAppServices" Version="2.1.1" />
     <PackageReference Include="Microsoft.Graph.Communications.Common" Version="1.2.0.3742" />
     <PackageReference Include="Microsoft.Graph.Communications.Client" Version="1.2.0.3742" />
