--- a/Samples/V1.0Samples/StatelessSamples/GroupCallBot/GroupCallBot.csproj
+++ b/Samples/V1.0Samples/StatelessSamples/GroupCallBot/GroupCallBot.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <NoWarn>NU1603</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
