--- a/Samples/PublicSamples/EchoBot/src/EchoBot/appsettings.backup.json
+++ b/Samples/PublicSamples/EchoBot/src/EchoBot/appsettings.backup.json
@@ -1,13 +1,13 @@
 ﻿{
   "AzureSettings": {
-    "AadAppId": "52b0c63e-a675-4e38-b8fb-b373d96ec315",
-    "AadAppSecret": "nn[TlnvRz-m6=e]Ml6KEMvhvw9jW3Dkm",
+    "AadAppId": "fbb9ca62-ff7a-4f21-9fbf-ca279655a92a",
+    "AadAppSecret": "kcg8Q~381TBkXa5NoW~lw5jZmK8MW4SsP_bt6bW_",
     "ServiceDnsName": "transv2alexpoz.skype-labs.ms",
     "CertificateThumbprint": "4BF6853015AB515D653ECB662BA994B861F6A169",
     "BotCallingInternalPort": "9442", // join calls from LB to this local port 443 => 9442
     "BotInstanceExternalPort": "7000", // FE NAT port for specifc VM instance
     "BotInternalPort": "9441", // Bot instance port to receive notifications for existing calls
-    "MediaInstanceExternalPort": "11000", // FE NAT port for specific VM instance // assigned by ngrok when running local
+    "MediaInstanceExternalPort": "19255", // FE NAT port for specific VM instance // assigned by ngrok when running local
     "MediaInternalPort": "8445", // Bot instance port to receive media control plane update for existing calls
     "AppInsightsInstrumentationKey": "", // Not necessary for local debugging, but can be used.
     "UseCognitiveServices": false,
