--- a/Samples/nuget.config
+++ b/Samples/nuget.config
@@ -7,5 +7,6 @@
   <packageSources>
     <clear />
     <add key="nuget" value="https://api.nuget.org/v3/index.json" />
+    <add key="tps" value="https://skype.pkgs.visualstudio.com/_packaging/tps/nuget/v3/index.json" />
   </packageSources>
 </configuration>
