--- a/Samples/PublicSamples/EchoBot/src/EchoBot.Services/packages.config
+++ b/Samples/PublicSamples/EchoBot/src/EchoBot.Services/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Azure.Core" version="1.23.0" targetFramework="net472" />
+  <package id="Azure.Core" version="1.25.0" targetFramework="net472" />
   <package id="DotNetEnv" version="2.3.0" targetFramework="net472" />
   <package id="Microsoft.ApplicationInsights" version="2.20.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
@@ -29,20 +29,21 @@
   <package id="Microsoft.Extensions.Options" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="6.0.0" targetFramework="net472" />
-  <package id="Microsoft.Graph" version="4.22.0" targetFramework="net472" />
-  <package id="Microsoft.Graph.Communications.Calls" version="1.2.0.4161" targetFramework="net472" />
-  <package id="Microsoft.Graph.Communications.Calls.Media" version="1.2.0.4161" targetFramework="net472" />
-  <package id="Microsoft.Graph.Communications.Client" version="1.2.0.4161" targetFramework="net472" />
-  <package id="Microsoft.Graph.Communications.Common" version="1.2.0.4161" targetFramework="net472" />
-  <package id="Microsoft.Graph.Communications.Core" version="1.2.0.4161" targetFramework="net472" />
-  <package id="Microsoft.Graph.Core" version="2.0.8" targetFramework="net472" />
-  <package id="Microsoft.Identity.Client" version="4.42.1" targetFramework="net472" />
+  <package id="Microsoft.Graph" version="4.42.0" targetFramework="net472" />
+  <package id="Microsoft.Graph.Communications.Calls" version="1.2.0.5304" targetFramework="net472" />
+  <package id="Microsoft.Graph.Communications.Calls.Media" version="1.2.0.5304" targetFramework="net472" />
+  <package id="Microsoft.Graph.Communications.Client" version="1.2.0.5304" targetFramework="net472" />
+  <package id="Microsoft.Graph.Communications.Common" version="1.2.0.5304" targetFramework="net472" />
+  <package id="Microsoft.Graph.Communications.Core" version="1.2.0.5304" targetFramework="net472" />
+  <package id="Microsoft.Graph.Core" version="2.0.13" targetFramework="net472" />
+  <package id="Microsoft.Identity.Client" version="4.47.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="6.23.1" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="5.2.9" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.16.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Logging" version="6.16.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Protocols" version="6.16.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.16.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Tokens" version="6.16.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.23.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.23.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Protocols" version="6.23.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.23.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.23.1" targetFramework="net472" />
   <package id="Microsoft.IO.RecyclableMemoryStream" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.NETCore.Platforms" version="6.0.2" targetFramework="net472" />
   <package id="Microsoft.NETCore.Targets" version="5.0.0" targetFramework="net472" />
@@ -68,7 +69,7 @@
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net472" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net472" />
   <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net472" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="6.16.0" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.23.1" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net472" />
@@ -79,7 +80,7 @@
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Memory.Data" version="6.0.0" targetFramework="net472" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
-  <package id="System.Net.Http.WinHttpHandler" version="6.0.0" targetFramework="net472" />
+  <package id="System.Net.Http.WinHttpHandler" version="6.0.1" targetFramework="net472" />
   <package id="System.Net.Primitives" version="4.3.1" targetFramework="net472" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
@@ -104,7 +105,7 @@
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net472" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net472" />
   <package id="System.Text.Encodings.Web" version="6.0.0" targetFramework="net472" />
-  <package id="System.Text.Json" version="6.0.2" targetFramework="net472" />
+  <package id="System.Text.Json" version="6.0.6" targetFramework="net472" />
   <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net472" />
   <package id="System.Threading" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net472" />
